--- a/kMeanClustering.ipynb
+++ b/kMeanClustering.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "K Mean Clustering"
+    "K Mean Clustering Program in pyhton "
    ]
   },
   {
